--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Jekyll Themes
-url: http://matt.harzewski.com
-description: Insert tagline here
+name: The Seed
+url: 
+description: BIO&CHEM Club
 
 permalink: /themes/:title/
 
